"styles.css" -> "style.css".
A typo that caused a failed validation.

--- a/opf-templates/template-cover.html
+++ b/opf-templates/template-cover.html
@@ -4,7 +4,7 @@
 <head>
 <title>$title</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="styles.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 <style type="text/css">
 body {
 	margin: 0;
